--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <p>If you wish to join in and have you artwork
         displayed in this collaboration, please contact me on Instagram-<br /><a href="https://www.instagram.com/lunulalyra/" target="_blank" rel="noreferrer">@lunulalyra</a></p>
       <br /><br />
-      <p>We can further discuss everything on there! Once we made contact, I will send you a template of the photocard on email, and simply you can just apply an existing piece of art or create a new one on it! Once completed, please let me know and then send it on email (to keep the best quality) with the name of the member/members, the group name and your Instagram username, so I can add them below the photocard!!</p>
+      <p>We can further discuss everything on there! The artwork you want to display can be a existing piece or a brand new one, it is up to you. Once you decided on what artwork you want, I will give you my email address and then you can send it on email (to keep the best quality) with the name of the member/members, the group name and your Instagram username, so I can add them below the photocard!</p>
       <br /><br />
       <p>Please note! Once you joined in, I would appropriate it you if could share the website around and possibly have a link to it on your Instagram bio or Linktree, Carrd or any other landing page you use! As this will indicate that you have your work on there plus increase the reach of discovering new artists!</p>
       <br /><br />
